# twelve-factor-app

./: .flake8  .flaskenv  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
migrations/versions/: 925c76710609_post_table_added.py  ce5c9f7448b1_user_model.py
src/: pyproject.toml
src/app/: __init__.py  app.db  config.py  routes.py  utils.py
src/app/controllers/: auth.py  post.py  user.py
src/app/models/: post.py  timestamp.py  user.py
src/app/schemas/: post.py  user.py
src/scripts/: devserver.py
